--- a/react-starter/index.html
+++ b/react-starter/index.html
@@ -8,7 +8,9 @@
 
    <body>
       <div id = "app"></div>
-      <script src = "index.js"></script>
+      <!-- <link  href="/node_modules/viewerjs/dist/viewer.css" rel="stylesheet">
+      <script src="/node_modules/viewerjs/dist/viewer.js"></script> -->
+      <script src ="index.js"></script>
    </body>
 
 </html>
