--- a/react-starter/index.html
+++ b/react-starter/index.html
@@ -4,12 +4,16 @@
    <head>
       <meta charset = "UTF-8">
       <title>Image Viewer</title>
+      <link href="//fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet">
+      <!-- <link rel="stylesheet" href="node_modules/css/image-gallery.css"/> -->
+      <!-- <link rel="stylesheet" href="src/App.css"/> -->
+      <style>
+      /*import "react-image-gallery/styles/css/image-gallery.css";*/
+        @import "node_modules/react-image-gallery/styles/css/image-gallery.css";
+      </style>
    </head>
-   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"> -->
    <body>
       <div id = "app"></div>
-      <!-- <link  href="/node_modules/viewerjs/dist/viewer.css" rel="stylesheet">
-      <script src="/node_modules/viewerjs/dist/viewer.js"></script> -->
       <script src ="index.js"></script>
    </body>
 
